css fixup and working navbar

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 	<embed type="text/html" src=i0.html class="dashboard">
 	<embed type="text/html" src=i1.html class="planner">
 	<embed type="text/html" src=i2.html class="finder">
+	<div id="belt">
+	</div>
 	<script src="js/scrumplib.js"></script>
 </html>
